# League-Of-Legends-Auto-Accept-Skins

./: .gitignore  README.md
docs/: SKIN-SAFETY-AND-REPAIR.md  SKINS_PORT.md
native/: Cargo.toml
native/modscan-core/: Cargo.toml
native/modscan-core/src/: lib.rs
native/src-tauri/: Cargo.toml  tauri.conf.json
native/src-tauri/resources/pengu-loader/plugins/CHUD-Declutter/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-QueueArena/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-SettingsPanel/: index.js
native/src-tauri/src/: config.rs  lib.rs  net.rs  winutil.rs
native/src-tauri/src/skins/: lcu_ext.rs  mod.rs  pengu.rs  phase.rs  slog.rs  swiftplay.rs  ticker.rs  trigger.rs
native/src-tauri/src/skins/bridge/: broadcast.rs  handlers.rs  http.rs  mod.rs
native/src-tauri/src/skins/downloads/: hashes.rs  mod.rs  repo.rs
native/src-tauri/src/skins/features/: loadscreen_label.rs
native/src-tauri/src/skins/injection/: injector.rs  mod.rs  overlay.rs  repair.rs  storage.rs  target_detect.rs
native/src-tauri/src/skins/party/: manager.rs  presence.rs  relay.rs  token.rs
native/ui/: index.html  overlay.html
native/ui/src/: library.js  main.js  overlay.js
native/ui/styles/: library.css  neon.css
skins-worker/: README.md  wrangler.toml
skins-worker/src/: index.js
